--- a/static/style.css
+++ b/static/style.css
@@ -1,223 +1,151 @@
-body,html{
-	height: 100%;
-	margin: 0;
-	background: rgb(44, 47, 59);
-   background: -webkit-linear-gradient(to right, rgb(40, 59, 34), rgb(54, 60, 70), rgb(32, 32, 43));
-	background: linear-gradient(to right, rgb(38, 51, 61), rgb(50, 55, 65), rgb(33, 33, 78));
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #1e1e2d;
+    background: -webkit-linear-gradient(to right, #1a1a2e, #16213e, #0f3460);
+    background: linear-gradient(to right, #1a1a2e, #16213e, #0f3460);
 }
 
-.chat{
-	margin-top: auto;
-	margin-bottom: auto;
+.chat {
+    margin-top: auto;
+    margin-bottom: auto;
 }
-.card{
-	height: 500px;
-	border-radius: 15px !important;
-	background-color: rgba(0,0,0,0.4) !important;
-}
-.contacts_body{
-	padding:  0.75rem 0 !important;
-	overflow-y: auto;
-	white-space: nowrap;
-}
-.msg_card_body{
-	overflow-y: auto;
-}
-.card-header{
-	border-radius: 15px 15px 0 0 !important;
-	border-bottom: 0 !important;
-}
-.card-footer{
-border-radius: 0 0 15px 15px !important;
-	border-top: 0 !important;
-}
-.container{
-	align-content: center;
-}
-.search{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color:white !important;
-}
-.search:focus{
-	 box-shadow:none !important;
-   outline:0px !important;
-}
-.type_msg{
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color:white !important;
-	height: 60px !important;
-	overflow-y: auto;
-}
-	.type_msg:focus{
-	 box-shadow:none !important;
-   outline:0px !important;
-}
-.attach_btn{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.send_btn{
-	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.search_btn{
-	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.contacts{
-	list-style: none;
-	padding: 0;
-}
-.contacts li{
-	width: 100% !important;
-	padding: 5px 10px;
-	margin-bottom: 15px !important;
-}
-.active{
-	background-color: rgba(0,0,0,0.3);
-}
-.user_img{
-	height: 70px;
-	width: 70px;
-	border:1.5px solid #f5f6fa;
 
+.card {
+    height: 550px;
+    border-radius: 15px !important;
+    background-color: #2c2e43 !important;
+    border: none;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
 }
-.user_img_msg{
-	height: 40px;
-	width: 40px;
-	border:1.5px solid #f5f6fa;
 
+.card-header {
+    border-radius: 15px 15px 0 0 !important;
+    border-bottom: 1px solid #3c3f56 !important;
+    background-color: #353648;
+    color: #fff;
 }
-.img_cont{
-	position: relative;
-	height: 70px;
-	width: 70px;
+
+.card-footer {
+    border-radius: 0 0 15px 15px !important;
+    border-top: 1px solid #3c3f56 !important;
+    background-color: #353648;
 }
-.img_cont_msg{
-	height: 40px;
-	width: 40px;
+
+.msg_card_body {
+    overflow-y: auto;
+    padding: 20px;
+    background-color: #2c2e43;
 }
-.online_icon{
-	position: absolute;
-	height: 15px;
-	width:15px;
-	background-color: #4cd137;
-	border-radius: 50%;
-	bottom: 0.2em;
-	right: 0.4em;
-	border:1.5px solid white;
+
+.user_img, .user_img_msg {
+    height: 50px;
+    width: 50px;
+    border: 2px solid #5887F9;
+    background-color: #5887F9;
 }
-.offline{
-	background-color: #c23616 !important;
+
+.img_cont, .img_cont_msg {
+    position: relative;
+    height: 50px;
+    width: 50px;
 }
-.user_info{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-left: 15px;
+
+.online_icon {
+    position: absolute;
+    height: 12px;
+    width: 12px;
+    background-color: #4cd137;
+    border-radius: 50%;
+    bottom: 0.5em;
+    right: 0.5em;
+    border: 1.5px solid #2c2e43;
 }
-.user_info span{
-	font-size: 20px;
-	color: white;
+
+.user_info {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 15px;
 }
-.user_info p{
-	font-size: 10px;
-	color: rgba(255,255,255,0.6);
+
+.user_info span {
+    font-size: 18px;
+    color: #fff;
+    font-weight: bold;
 }
-.video_cam{
-	margin-left: 50px;
-	margin-top: 5px;
+
+.user_info p {
+    font-size: 12px;
+    color: #b0b0b0;
 }
-.video_cam span{
-	color: white;
-	font-size: 20px;
-	cursor: pointer;
-	margin-right: 20px;
+
+.msg_cotainer_send {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+    border-radius: 20px;
+    background-color: #5887F9;
+    padding: 12px 18px;
+    position: relative;
+    color: #fff;
 }
-.msg_cotainer{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-left: 10px;
-	border-radius: 25px;
-	background-color: rgb(82, 172, 255);
-	padding: 10px;
-	position: relative;
+
+.msg_cotainer_bot {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 10px;
+    border-radius: 20px;
+    background-color: #3c3f56;
+    padding: 12px 18px;
+    position: relative;
+    color: #fff;
 }
-.msg_cotainer_send{
-	margin-top: auto;
-	margin-bottom: auto;
-	margin-right: 10px;
-	border-radius: 25px;
-	background-color: #58cc71;
-	padding: 10px;
-	position: relative;
+
+.msg_time, .msg_time_send {
+    position: absolute;
+    bottom: -18px;
+    font-size: 10px;
+    color: #999;
 }
-.msg_time{
-	position: absolute;
-	left: 0;
-	bottom: -15px;
-	color: rgba(255,255,255,0.5);
-	font-size: 10px;
+
+.msg_time {
+    left: 0;
 }
-.msg_time_send{
-	position: absolute;
-	right:0;
-	bottom: -15px;
-	color: rgba(255,255,255,0.5);
-	font-size: 10px;
+
+.msg_time_send {
+    right: 0;
 }
-.msg_head{
-	position: relative;
+
+.type_msg {
+    background-color: #3c3f56 !important;
+    border: none !important;
+    color: #fff !important;
+    height: 50px !important;
+    border-radius: 25px !important;
+    padding-left: 20px;
+    font-size: 14px;
 }
-#action_menu_btn{
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	color: white;
-	cursor: pointer;
-	font-size: 20px;
+
+.type_msg::placeholder {
+    color: #b0b0b0;
 }
-.action_menu{
-	z-index: 1;
-	position: absolute;
-	padding: 15px 0;
-	background-color: rgba(0,0,0,0.5);
-	color: white;
-	border-radius: 15px;
-	top: 30px;
-	right: 15px;
-	display: none;
+
+.type_msg:focus {
+    box-shadow: none !important;
+    outline: 0px !important;
 }
-.action_menu ul{
-	list-style: none;
-	padding: 0;
-	margin: 0;
+
+.send_btn {
+    border-radius: 25px !important;
+    background-color: #5887F9 !important;
+    border: 0 !important;
+    color: white !important;
+    cursor: pointer;
+    padding: 0 20px;
+    margin-left: 10px;
 }
-.action_menu ul li{
-	width: 100%;
-	padding: 10px 15px;
-	margin-bottom: 5px;
-}
-.action_menu ul li i{
-	padding-right: 10px;
-}
-.action_menu ul li:hover{
-	cursor: pointer;
-	background-color: rgba(0,0,0,0.2);
-}
-@media(max-width: 576px){
-	.contacts_card{
-	margin-bottom: 15px !important;
-}
+
+.send_btn i {
+    font-size: 16px;
 }
